1、提供 MemoryCache 做缓存处理；2、提供 Redis 做缓存处理；

--- a/Larxyoung.Blog.Web.Core/Larxyoung.Blog.Web.Core.csproj
+++ b/Larxyoung.Blog.Web.Core/Larxyoung.Blog.Web.Core.csproj
@@ -21,6 +21,12 @@
 	  </Content>
 	</ItemGroup>
 
+
+	<ItemGroup>
+	  <PackageReference Include="AspNetCoreRateLimit" Version="5.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.4" />
+	</ItemGroup>
+
 	<ItemGroup>
 		<ProjectReference Include="..\Larxyoung.Blog.Application\Larxyoung.Blog.Application.csproj" />
 	</ItemGroup>
