1、添加`IpRateLimiting`做API限流处理;

--- a/Larxyoung.Blog.Web.Entry/appsettings.json
+++ b/Larxyoung.Blog.Web.Entry/appsettings.json
@@ -7,5 +7,52 @@
       "Microsoft.EntityFrameworkCore": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*", 
+  // 中间件是否启动配置
+  "Middleware": {
+    // IP限流
+    "IpRateLimit": {
+      "Enabled": true
+    }
+  },
+  // IP限流配置
+  "IpRateLimiting": {
+    // false，则全局将应用限制，并且仅应用具有作为端点的规则*。例如，如果您设置每秒5次调用的限制，则对任何端点的任何HTTP调用都将计入该限制
+    // true， 则限制将应用于每个端点，如{HTTP_Verb}{PATH}。例如，如果您为*:/api/values客户端设置每秒5个呼叫的限制，
+    "EnableEndpointRateLimiting": true,
+    "StackBlockedRequests": false, // False: 拒绝次数应记录在另一个计数器上
+    "RealIpHeader": "X-Real-IP", // 真实IP
+    "ClientIdHeader": "X-ClientId", // 客户端ID
+    "IpWhitelist": [ "127.0.0.1", "192.168.1.64", "192.168.1.89" ], // IP白名单:支持Ip v4和v6
+    "EndpointWhitelist": [], // 端点白名单
+    "ClientWhitelist": [], // 客户端白名单
+    "QuotaExceededResponse": { // 返回提示信息
+      "Content": "{{\"statusCode\":429,\"data\":\"访问过于频繁，请稍后重试！\",\"succeeded\":false}}",
+      "ContentType": "application/json",
+      "StatusCode": 429
+    },
+    "HttpStatusCode": 429, // 返回状态码
+    "GeneralRules": [ // 通用规则
+      {
+        "Endpoint": "*", // 端点
+        "Period": "1s", // 周期 s秒 m分 h时 d天
+        "Limit": 3 // 次数
+      },
+      {
+        "Endpoint": "*",
+        "Period": "15m",
+        "Limit": 100
+      },
+      {
+        "Endpoint": "*",
+        "Period": "12h",
+        "Limit": 1000
+      },
+      {
+        "Endpoint": "*",
+        "Period": "7d",
+        "Limit": 10000
+      }
+    ]
+  }
 }
