1、添加`雪花算法ID`工具类；2、添加`验证码生成器`工具类；

--- a/Larxyoung.Blog.Web.Entry/appsettings.json
+++ b/Larxyoung.Blog.Web.Entry/appsettings.json
@@ -7,7 +7,11 @@
       "Microsoft.EntityFrameworkCore": "Information"
     }
   },
-  "AllowedHosts": "*", 
+  "AllowedHosts": "*",
+  // 雪花算法ID 数据中心ID
+  "SnowFlakeTwepoch": 20230220,
+  // 雪花算法ID 机器ID
+  "SnowFlakeWorkerIdBits": 1,
   // 中间件是否启动配置
   "Middleware": {
     // IP限流
