1、增加用户表；2、增加是否启用登录验证码接口、获取登录图片验证码接口、登录接口。

--- a/Larxyoung.Blog.Web.Core/dbsettings.json
+++ b/Larxyoung.Blog.Web.Core/dbsettings.json
@@ -7,6 +7,8 @@
   // Redis连接配置
   "Redis": {
     "ConnectionStrings": "localhost:6380,password=ljs@0122!",
-    "InstanceName": "Blog_"
+    "InstanceName": "Blog_",
+    "CaptchaName": "Captcha:",
+    "TokenName": "Token:"
   }
 }
