--- a/Larxyoung.Blog.Web.Entry/appsettings.json
+++ b/Larxyoung.Blog.Web.Entry/appsettings.json
@@ -12,6 +12,8 @@
   "SnowFlakeTwepoch": 20230220,
   // 雪花算法ID 机器ID
   "SnowFlakeWorkerIdBits": 1,
+  // 是否启用登录验证码
+  "LoginShowCaptcha": true,
   // 中间件是否启动配置
   "Middleware": {
     // IP限流
@@ -23,7 +25,7 @@
   "IpRateLimiting": {
     // false，则全局将应用限制，并且仅应用具有作为端点的规则*。例如，如果您设置每秒5次调用的限制，则对任何端点的任何HTTP调用都将计入该限制
     // true， 则限制将应用于每个端点，如{HTTP_Verb}{PATH}。例如，如果您为*:/api/values客户端设置每秒5个呼叫的限制，
-    "EnableEndpointRateLimiting": true,
+    "EnableEndpointRateLimiting": false,
     "StackBlockedRequests": false, // False: 拒绝次数应记录在另一个计数器上
     "RealIpHeader": "X-Real-IP", // 真实IP
     "ClientIdHeader": "X-ClientId", // 客户端ID
@@ -41,22 +43,22 @@
         "Endpoint": "*", // 端点
         "Period": "1s", // 周期 s秒 m分 h时 d天
         "Limit": 3 // 次数
-      },
-      {
-        "Endpoint": "*",
-        "Period": "15m",
-        "Limit": 100
-      },
-      {
-        "Endpoint": "*",
-        "Period": "12h",
-        "Limit": 1000
-      },
-      {
-        "Endpoint": "*",
-        "Period": "7d",
-        "Limit": 10000
       }
+      //{
+      //  "Endpoint": "*",
+      //  "Period": "15m",
+      //  "Limit": 100
+      //},
+      //{
+      //  "Endpoint": "*",
+      //  "Period": "12h",
+      //  "Limit": 1000
+      //},
+      //{
+      //  "Endpoint": "*",
+      //  "Period": "7d",
+      //  "Limit": 10000
+      //}
     ]
   }
 }
